--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -15,6 +15,15 @@
   </head>
   <body>
     <h1><img src="images/blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="bgnews.html">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+      </ul>
+    </nav>
     <h2>The Restaurant</h2>
     <p>The Black Goose Bistor offers casual launch and dinner fare in a relaxed atmosphere.
     The menu changes regularly to highlight the freshest local ingredients.</p>
