--- a/blackgoose/bgnews.html
+++ b/blackgoose/bgnews.html
@@ -9,10 +9,11 @@
         <h1>The Black Goose Blog</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Menu</li>
-        <li>Blog</li>
-        <li>Contact</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="bgnews.html">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
       </ul>
     </nav>
   </header>
