--- a/blackgoose/jenskitchen/jenskitch.html
+++ b/blackgoose/jenskitchen/jenskitch.html
@@ -13,9 +13,9 @@ body
     <ul>
       <li><a href="../index.html">Black Goose Bistro</a></li>
       <li><a href="../menu.html">Menu</a></li>
-      <li><a href="../bgnews.html">Black Goose News</a></li>
+      <li><a href="../bgnews.html">News</a></li>
       <li><a href="../contact.html">Contact</a></li>
-      <li><a href="jenskitch.html">Home</a></li>
+      <li><a href="jenskitch.html">Jen's Kitchen</a></li>
     </ul>
   </nav>
 
