--- a/blackgoose/bgnews.html
+++ b/blackgoose/bgnews.html
@@ -19,6 +19,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
+        <li><a href="gallery/index.html">Gallery</a></li>
         <li><a href="bgnews.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
