--- a/blackgoose/gallery/index.html
+++ b/blackgoose/gallery/index.html
@@ -34,19 +34,29 @@ img {
 <body>
 
 
-<h1>Black Goose Bistro Gallery</h1>
-<p>Not is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
 
+<h1>Black Goose Bistro Gallery</h1>
+<nav>
+  <ul>
+    <li><a href="..\index.html">Home</a></li>
+    <li><a href="..\menu.html">Menu</a></li>
+    <li><a href="index.html">Gallery</a></li>
+    <li><a href="..\bgnews.html">News</a></li>
+    <li><a href="..\contact.html">Contact</a></li>
+    <li><a href="..\jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+  </ul>
+</nav>
+<p>Not is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
 <h2>Our Baked Goods</h2>
-<p><a href="bread.html"><picture><source media="(min-width:480px)" srcset="photos/bread-1200.jpg 1200w, photos/bread-800.jpg 800w" sizes="80vw"> <img src="thumbnails/bread-200.jpg" alt="close-up of sliced rustic bread" width="200" height="200"></picture></a><br>
+<p><a href="bread.html"><picture><source media="(min-width:480px)" srcset="photos/bread-1200.jpg 1200w, photos/bread-800.jpg 800w" sizes="80vw"> <img src="thumbnails/bread-200.jpg" alt="close-up of sliced rustic bread"></picture></a><br>
 We start our day at the crack of dawn to bake our own muffins, bread, and dinner rolls. Loaves not used that day are donated to the local food shelter. </p>
 
 <h2>Our Burgers</h2>
-<p><a href="burgers.html"><picture><source media="(min-width:480px)" srcset="photos/burgers-1200.jpg 1200w, photos/burger-800.jpg 800w" sizes="80vw"> <img src="thumbnails/burgers-200.jpg" alt="close-up of our burger" width="200" height="200"></picture></a><br>
+<p><a href="burgers.html"><picture><source media="(min-width:480px)" srcset="photos/burgers-1200.jpg 1200w, photos/burger-800.jpg 800w" sizes="80vw"> <img src="thumbnails/burgers-200.jpg" alt="close-up of our burger"></picture></a><br>
   People come from all over to enjoy our lovingly made burgers. We grind our own locally-sourced organic beef and turkey so you know it's fresh and free from fillers and other nonsense. Go for one of our creative topping combos or stick with the classics. </p>
 
 <h2>Catch of the Day</h2>
-<p><a href="fish.html"><picture><source media="(min-width:480px)" srcset="photos/fish-1200.jpg 1200w, photos/fish-800.jpg 800w" sizes="80vw"> <img src="thumbnails/fish-200.jpg" alt="close-up of the catch of the day" width="200" height="200"></picture></a><br>
+<p><a href="fish.html"><picture><source media="(min-width:480px)" srcset="photos/fish-1200.jpg 1200w, photos/fish-800.jpg 800w" sizes="80vw"> <img src="thumbnails/fish-200.jpg" alt="close-up of the catch of the day"></picture></a><br>
   Our chef works with local fisherman to pick the freshest the sea has to offer for our daily seafood special. Our Roast Cod Caponata with Roasted Potatoes is an old favorite with our regulars.</p>
 
 <h2>Our Chicken</h2>
