--- a/blackgoose/jenskitchen/jenskitch.html
+++ b/blackgoose/jenskitchen/jenskitch.html
@@ -13,6 +13,7 @@ body
     <ul>
       <li><a href="../index.html">Black Goose Bistro</a></li>
       <li><a href="../menu.html">Menu</a></li>
+      <li><a href="../gallery/index.html">Gallery</a></li>
       <li><a href="../bgnews.html">News</a></li>
       <li><a href="../contact.html">Contact</a></li>
       <li><a href="jenskitch.html">Jen's Kitchen</a></li>
