--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -41,7 +41,7 @@
         <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
       </ul>
     </nav>
-    <a href="pizza.html" target="blank"><img src="button.gif" alt="order button"  height ="100px"></a>
+    <a href="pizza.html" target="blank"><img src="Button.gif" alt="order button"  height ="100px"></a>
     <h2>The Restaurant</h2>
     <p>The Black Goose Bistor offers casual launch and dinner fare in a relaxed atmosphere.
     The menu changes regularly to highlight the freshest local ingredients.</p>
