--- a/blackgoose/bgnews.html
+++ b/blackgoose/bgnews.html
@@ -23,6 +23,7 @@
         <li><a href="bgnews.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+        <li><a href="cooking.html">Cooking with Daniel</a></li>
       </ul>
     </nav>
   </header>
