--- a/resume/index.html
+++ b/resume/index.html
@@ -74,7 +74,7 @@
       <nav>
       <a class="navlinks" href="https://www.kaitlindeanne.com " target="_blank">Portfolio</a>
        <a class="navlinks" href="mailto:hello.kaitlindeanne@gmail.com">Email</a>
-       <a class="navlinks" href="https://www.instagram.com/kait.deanne/">Instagram</a>
+       <a class="navlinks" target="_blank" href="https://www.instagram.com/kait.deanne/">Instagram</a>
      </nav>
     </header>
     <section class="about">
@@ -139,11 +139,11 @@
         </section>
 
       <section class="right-half">
-      <p><img src="images/Kaitlin_Whitaker_SelfPortrait (1).png" width="40%">
-        <img src="images/Whitaker_Kaitlin_InfoGraphic.png" width="40%">
-        <img src="images/Whitaker_Kaitlin_ActionWords.png" width="40%">
-        <img src="images/Cherry.png" width="40%">
-        <img src="images/Asset 1.png" width="40%">
+      <p><a href="gallery/selfportrait.html"><img src="gallery/images/Kaitlin_Whitaker_SelfPortrait (1).png"></a>
+        <a href="gallery/infographic.html"><img src="gallery/images/Whitaker_Kaitlin_InfoGraphic.png"></a>
+        <a href="gallery/actionwords.html"><img src="gallery/images/Whitaker_Kaitlin_ActionWords.png"></a>
+        <a href="gallery/cherries.html"><img src="gallery/images/Cherry.png"></a>
+        <a href="gallery/dog.html"><img src="gallery/images/dog.png"></a>
       </p>
 
       </section>
