--- a/blackgoose/Menu Exercises/summermenu_ex8.html
+++ b/blackgoose/Menu Exercises/summermenu_ex8.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>Black Goose Bistro Summer Menu</title>
-<link href="https://fonts.googleapis.com/css2?family=Vibes&display=swap" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="menustyles.css">
 </head>
 
