--- a/blackgoose/gallery/index.html
+++ b/blackgoose/gallery/index.html
@@ -4,18 +4,17 @@
 <meta charset="UTF-8">
 <title>Black Goose Bistro Gallery</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="../styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Marko+One&family=Vibes&display=swap" rel="stylesheet">
+
 <style>
 body {
   background-color: #faf2e4;
   margin: 0 10%;
   font-family: sans-serif;
   }
-
 h1 {
   text-align: center;
-  font-family: serif;
-  font-weight: normal;
-  text-transform: uppercase;
   border-bottom: 1px solid #57b1dc;
   margin-top: 30px;
 }
@@ -38,14 +37,14 @@ img {
 <h1>Black Goose Bistro Gallery</h1>
 <nav>
   <ul>
-    <li><a href="..\index.html">Home</a></li>
-    <li><a href="..\menu.html">Menu</a></li>
-    <li><a href="index.html">Gallery</a></li>
-    <li><a href="..\bgnews.html">News</a></li>
-    <li><a href="..\contact.html">Contact</a></li>
-    <li><a href="..\jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+    <li><a class="navlinks" href="../index.html">Home</a></li>
+    <li><a class="navlinks" href="../menu.html" target="_blank">Menu</a></li>
+    <li><a class="navlinks" href="../gallery/index.html">Gallery</a></li>
+    <li><a class="navlinks" href="../bgnews.html">News</a></li>
+    <li><a class="navlinks" href="../contact.html">Contact</a></li>
+    <li><a class="navlinks" href="../jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
   </ul>
-</nav>
+</nav><br>
 <p>Not is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
 <h2>Our Baked Goods</h2>
 <p><a href="bread.html"><picture><source media="(min-width:480px)" srcset="photos/bread-1200.jpg 1200w, photos/bread-800.jpg 800w" sizes="80vw"> <img src="thumbnails/bread-200.jpg" alt="close-up of sliced rustic bread"></picture></a><br>
