--- a/blackgoose/pizza.html
+++ b/blackgoose/pizza.html
@@ -3,38 +3,23 @@
 <head>
   <meta charset="utf-8" >
    <title>Blackstone Bistro: Pizza-on-Demand</title>
-   <style>
-     body {background-color:#faf2e4; margin: 0 10%; font-family: sans-serif;}
-
-     h1{text-align: center; font-family:serif; font-weight:normal;text-transform: uppercase;
-       border-bottom: 1px solid #57b1dc; margin-top: 30px;}
-
-     h2{color:#d1633c;font-size: 1em;}
-
-     footer{ border-top:1px solid #57b1dc; text-align: center; padding-top: 1em;}
-
-     footer img {width 40px; height:40px; margin-left: .5em; margin-right: .5em;}
-
-     ul{
-       list-style: none;
-     }
-
-   </style>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Marko+One&family=Vibes&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
         <h1>Blackstone Bistro | Pizza-on-Demand</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="gallery/index.html">Gallery</a></li>
-        <li><a href="bgnews.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
-      </ul>
-    </nav>
+        <nav>
+          <ul>
+            <li><a class="navlinks" href="index.html">Home</a></li>
+            <li><a class="navlinks" href="menu6.html">Menu</a></li>
+            <li><a class="navlinks" href="gallery/index.html">Gallery</a></li>
+            <li><a class="navlinks" href="bgnews.html">News</a></li>
+            <li><a class="navlinks" href="contact.html">Contact</a></li>
+            <li><a class="navlinks" href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+          </ul>
+        </nav><br>
   </header>
 
 
