--- a/blackgoose/Menu Exercises/summermenu_ex4.html
+++ b/blackgoose/Menu Exercises/summermenu_ex4.html
@@ -4,8 +4,97 @@
 <head>
 <meta charset="utf-8">
 <title>Black Goose Bistro Summer Menu</title>
-<link href="https://fonts.googleapis.com/css2?family=Vibes&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="menustyles.css">
+<link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
+<style>
+body {
+  font-family: Georgia, serif;
+  font-size: 100%;
+  line-height: 175%;
+  margin: 0 15% 0;
+  background-color:#d2dc9d;
+  /*background-image:url(images/bullseye.png);
+  background-position: center top;*/
+  background-image: url(images/blackgoosebackground.png);
+  background-repeat: no-repeat;
+  background-position: center 100px;
+}
+header {
+  margin-top: 0;
+  padding: 3em 1em 2em 1em;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  background-image: url(images/purpledot.png);
+  background-repeat: repeat-x;
+  background-position: center top;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font: bold 1.5em Georgia, serif;
+  text-shadow: .1em .1em .2em gray;
+  color:#993399;
+}
+h2 {
+  font-size: 1em;
+  text-transform: uppercase;
+  letter-spacing: .5em;
+  text-align: center;
+  color:#cc6600;
+}
+dt {
+  font-weight: bold;
+}
+strong {
+  font-style: italic;
+}
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+#info p {
+  font-style: italic;
+}
+.price {
+  font-family: Georgia, serif;
+  font-style: italic;
+}
+p.warning, sup {
+  font-size: small;
+}
+.label {
+  font-weight: bold;
+  font-variant: small-caps;
+  font-style: normal;
+}
+
+h2 + p {
+  text-align: center;
+  font-style: italic;
+}
+a:link{
+  color:#993399;
+}
+a:visited{
+  color:#937393;
+}
+a:hover{
+  color:#c700f2;
+  background-color:#fff;
+}
+a:focus{
+  color:#c700f2;
+  background-color:#fff;
+}
+a:active{
+  background-color: white;
+  color:#ff00ff;
+  }
+
+</style>
 </head>
 
 <body>
