--- a/blackgoose/bgnews.html
+++ b/blackgoose/bgnews.html
@@ -3,29 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Black Goose News</title>
-    <style>
-    body {background-color:#faf2e4; margin: 0 10%; font-family: sans-serif;}
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Marko+One&family=Vibes&display=swap" rel="stylesheet">
 
-    h1{text-align: center; font-family:serif; font-weight:normal;text-transform: uppercase;
-      border-bottom: 1px solid #57b1dc; margin-top: 30px;}
-
-    h2{color:#d1633c;font-size: 1em;}
-    </style>
   </head>
   <body>
   <header>
         <h1>The Black Goose Blog</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="gallery/index.html">Gallery</a></li>
-        <li><a href="bgnews.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
-        <li><a href="cooking.html">Cooking with Daniel</a></li>
-      </ul>
-    </nav>
+        <nav>
+          <ul>
+            <li><a class="navlinks" href="index.html">Home</a></li>
+            <li><a class="navlinks" href="menu.html" target="_blank">Menu</a></li>
+            <li><a class="navlinks" href="gallery/index.html">Gallery</a></li>
+            <li><a class="navlinks" href="bgnews.html">News</a></li>
+            <li><a class="navlinks" href="contact.html">Contact</a></li>
+            <li><a class="navlinks" href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+          </ul>
+        </nav><br>
   </header>
     <article>
       <header>
