--- a/blackgoose/jenskitchen/jenskitch.html
+++ b/blackgoose/jenskitchen/jenskitch.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"><title>Jen's Kitchen</title><style>
-body
-{	margin: 2em 6em;	font-family: Georgia, "Times New Roman", Times, serif;}h1, h2 {
-  	color: #399;}h1 {	font-size: 1.5em;}h2 {	font-family: Verdana, Geneva, sans-serif;	font-size: 1em;}small {
-      	color: #999;}</style>
+  <meta charset="utf-8"><title>Jen's Kitchen</title>
+  <link rel="stylesheet" href="jenskitchenstyles.css">
 </head>
   <body>
 <img src="images/jenskitchen.gif" alt="Jen's Kitchen banner" width="660" height="94">
-  <nav>
-    <ul>
-      <li><a href="../index.html">Black Goose Bistro</a></li>
-      <li><a href="../menu.html">Menu</a></li>
-      <li><a href="../gallery/index.html">Gallery</a></li>
-      <li><a href="../bgnews.html">News</a></li>
-      <li><a href="../contact.html">Contact</a></li>
-      <li><a href="jenskitch.html">Jen's Kitchen</a></li>
-    </ul>
-  </nav>
 
-          <h1>Welcome to Jen&rsquo;s Kitchen</h1>
-          <p>People who know me know that I love to cook.
+          <h1><br>Welcome to Jen&rsquo;s Kitchen</h1>
+          <nav>
+            <ul>
+              <li><a class="navlinks" href="../index.html">Home</a></li>
+              <li><a class="navlinks" href="../menu.html" target="_blank">Menu</a></li>
+              <li><a class="navlinks" href="../gallery/index.html">Gallery</a></li>
+              <li><a class="navlinks" href="../bgnews.html">News</a></li>
+              <li><a class="navlinks" href="../contact.html">Contact</a></li>
+              <li><a class="navlinks" href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+            </ul>
+          </nav><br>
+          <p class="intro">People who know me know that I love to cook.
             I've created this site to share some of my favorite recipes and online food resources.
             <i>Bon Appetit!</i>
           </p>
           <p><a href="about.html">About the site</a></p>
           <h2>From Jen&rsquo;s Cookbook</h2>
           <ul>
-             <li><a href="recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
-             <li><a href="recipes/salmon.html">Garlic Salmon</a></li>
-             <li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
-             <li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
+             <li><a href="recipes/tapenade.html" target="_blank">Tapenade (Olive Spread)</a></li>
+             <li><a href="recipes/salmon.html" target="_blank">Garlic Salmon</a></li>
+             <li><a href="recipes/pasta/linguine.html" target="_blank">Linguine with Clam Sauce</a></li>
+             <li><a href="recipes/pasta/couscous.html" target="_blank">Couscous with Peas and Mint</a></li>
            </ul>
            <h2>Good Food on the Web</h2>
            <ul>
