--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -39,7 +39,7 @@
     Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
     <h2>Location and Hours</h2>
     <p>Seekonk, Massachusetts;<br> Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight</p>
-    <a class ="buttons" href="pizza.html" target="blank"><img src="Button.gif" alt="order button"  height ="100px"></a>
+    <a class ="buttons" href="pizza.html" target="blank"><img src="Button.gif" alt="order button"  height="100p"></a>
 
       <footer>
         <p>Please vist our social media pages</p>
