--- a/resume/index.html
+++ b/resume/index.html
@@ -3,68 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Your Web Presence</title>
-    <style>
-    body {
-      color: #F2DFBB;
-      background-color: #282828;
-      margin: 0 10%;
-      font-family: sans-serif;
-      }
-      h1 {
-        text-align: left;
-        font-family: sans-serif;
-        font-weight: normal;
-        margin-top: 30px;
-      }
-      h2{
-        text-align: center;
-      }
-      li{
-        list-style: none;
-      }
-      ul{
-        list-style: none;
-      }
-      img{
-        padding:2%;
-        vertical-align: top;
-      }
-      a:link, a:visited{
-        text-decoration: none;
-        color: #F2DFBB;
-      }
-      a:hover{
-        color:#F23A29;
-      }
-      nav{
-        text-align: center;
-        padding: 30px;
-        font-size: 20px;
-      }
-      .navlinks{
-        padding-left: 10%;
-        padding-right: 10%;
-      }
-        .left-half {
-    padding-left: 2%;
-    background-color: black;
-    position: absolute;
-    left: 0px;
-    width: 18%;
-  }
-
-  .right-half {
-    background-color: #white;
-    position: absolute;
-    right: 0px;
-    width: 78%;
-    margin-left: 2%;
-  }
-  .about{
-    padding:30px;
-  }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -139,11 +79,11 @@
         </section>
 
       <section class="right-half">
-      <p><a href="gallery/selfportrait.html"><img src="gallery/images/Kaitlin_Whitaker_SelfPortrait (1).png"></a>
-        <a href="gallery/infographic.html"><img src="gallery/images/Whitaker_Kaitlin_InfoGraphic.png"></a>
-        <a href="gallery/actionwords.html"><img src="gallery/images/Whitaker_Kaitlin_ActionWords.png"></a>
-        <a href="gallery/cherries.html"><img src="gallery/images/Cherry.png"></a>
-        <a href="gallery/dog.html"><img src="gallery/images/dog.png"></a>
+      <p><a href="gallery/selfportrait.html"><img src="gallery/images/Kaitlin_Whitaker_SelfPortrait.png" alt="portrait"></a>
+        <a href="gallery/infographic.html"><img src="gallery/images/Whitaker_Kaitlin_InfoGraphic.png" alt="Info graphic"></a>
+        <a href="gallery/actionwords.html"><img src="gallery/images/Whitaker_Kaitlin_ActionWords.png" alt="Action word"></a>
+        <a href="gallery/cherries.html"><img src="gallery/images/Cherry.png" alt="cherry painting"></a>
+        <a href="gallery/dog.html"><img src="gallery/images/dog.png" alt="dog art"></a>
       </p>
 
       </section>
